# Coel

./: .gitignore  CMakeLists.txt
cmake/: config.cmake.in
include/coel/window/: core.hpp  event.hpp  native.hpp
src/window/: win32.cpp
tests/: CMakeLists.txt
tests/window/: main.cpp
